# mlops-zoomcamp

./: .gitignore  pyproject.toml
01-intro/hw/: solution.ipynb
cohorts/2024/02-experiment-tracking/homework/: hpo.py  register_model.py  train.py
