[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["max509 <123456vershinin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
numpy = "^1.26.4"
scipy = "^1.13.1"
pyarrow = "^16.1.0"
scikit-learn = "^1.5.0"
polars = "^0.20.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
